// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Admission confirmed screen 1`] = `
<div
  className="admitted-content"
>
  <div>
    <h4>
      You're coming to TreeHacks 
      2020
      !
    </h4>
    <p>
      Admission confirmed – see you there! Make sure to review and confirm your 
      <Link
        replace={false}
        to="/transportation"
      >
        travel information
      </Link>
      .
    </p>
    <p>
      Make sure to check out the 
      <a
        href="https://treehacks.quip.com/AAJgA6BS2tvU/The-Ultimate-TreeHacks-Guide-"
      >
        Ultimate TreeHacks Guide 🌲
      </a>
       to learn more!
    </p>
  </div>
  <button
    className="btn btn-custom inverted"
    onClick={[Function]}
  >
    decline spot
  </button>
  <button
    className="btn btn-custom"
    disabled={true}
    onClick={[Function]}
  >
    already confirmed
  </button>
</div>
`;

exports[`Format admission deadline with PST time zone 1`] = `
<div
  className="admitted-content"
>
  <div>
    <h4>
      Congratulations! You've been accepted to TreeHacks 
      2020
      !
    </h4>
    <p>
      We're so stoked to see you the weekend of 
      February 15-17
       at Stanford. We were blown away by your application and know that you’ll be an inspiring hacker. It'll be a super fun weekend filled with amazing hacks, delicious food, and fantastic people. We hope you can join us!
    </p>
    <p>
      You have until 
      November 27, 2048 8:39 PM PST
       to confirm your attendance at TreeHacks 
      2020
      . If you don't confirm by then, we'll assume you can't make it and give your spot to someone else.
    </p>
    <p>
      By confirming your spot, you agree to let us share the information you gave us in your application with our sponsors. If you'd like to opt out, send us a message at hello@treehacks.com.
    </p>
  </div>
  <button
    className="btn btn-custom inverted"
    onClick={[Function]}
  >
    decline spot
  </button>
  <button
    className="btn btn-custom"
    disabled={false}
    onClick={[Function]}
  >
    confirm spot
  </button>
  <p>
    We are committed to helping every admitted hacker get here! Check out the 
    <Link
      replace={false}
      to="/transportation"
    >
      travel section
    </Link>
     for details.
  </p>
</div>
`;
